Fix overscroll white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  overscroll-behavior-y: none;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
